--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -21,7 +21,7 @@
         </li>
       </ul>
       <ul class="navbar-nav">
-        <li>
+        <li class="nav-item cursor-pointer">
           <a class="nav-link" (click)="logout()">Logout</a>
         </li>
       </ul>
