--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -7,6 +7,10 @@
   color: var(--blue);
 }
 
+#toggle-password {
+  margin-left: -30px;
+  cursor: pointer;
+}
 
 // ===================================== MEDIA QUERIES ===================================== 
 
